@@ -28,7 +28,7 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
     implementation group: 'org.openpnp', name: 'opencv', version: '4.5.4-0'
-    implementation group: 'org.bytedeco', name: 'tesseract', version: '5.0.1-1.5.7'
+    implementation group: 'org.bytedeco', name: 'tesseract-platform', version: '5.0.1-1.5.7'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'   
 }
@@ -54,16 +54,18 @@ sourceSets {
 
 test {
     useJUnitPlatform()
+    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+        systemProperties['java.library.path'] = 'C:/opencv/build/java/x64' + ";" + "C:/Program_Files/Tesseract_OCR"
+    } else {
+        systemProperties['java.library.path'] = '/usr/local/share/java/opencv4'
+    }   
 }
 
 import org.apache.tools.ant.taskdefs.condition.Os
 
 run {
-    jvmArgs = [
-            '--enable-preview'
-    ]
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-        systemProperties['java.library.path'] = 'C:/opencv/build/java/x64'
+        systemProperties['java.library.path'] = 'C:/opencv/build/java/x64' + ";" + "C:/Program_Files/Tesseract_OCR"
     } else {
         systemProperties['java.library.path'] = '/usr/local/share/java/opencv4'
     }    
